--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-31 13:06+0000\n"
+"POT-Creation-Date: 2018-08-31 16:26+0000\n"
 "PO-Revision-Date: 2018-08-18 21:45+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -43,27 +43,27 @@ msgstr "Dieser Benutzername ist verboten."
 
 #: home/templates/home/base.html:56
 msgid ""
-"Developing and hosting a great web applicable is fun. But not free. If you "
+"Developing and hosting a great web applicable is fun, but not free. If you "
 "love Mountain Bikers Club please consider <a href=\"https://liberapay.com/"
-"cedeber\" target=\"_blank\" rel=\"noopener\">donating with a Liberapay "
-"subscription</a>. Thank you very much!"
+"cedeber\" target=\"_blank\" rel=\"noopener\">helping me for the price of few "
+"cafes</a>. Thank you very much!"
 msgstr ""
 
-#: home/templates/home/base.html:76 home/templates/home/discover.html:4
+#: home/templates/home/base.html:75 home/templates/home/discover.html:4
 #: home/templates/home/discover.html:10
 msgid "Discover"
 msgstr "Entdecken"
 
-#: home/templates/home/base.html:83 home/templates/home/index.html:30
+#: home/templates/home/base.html:82 home/templates/home/index.html:30
 #: home/templates/home/login.html:4 home/templates/home/login.html:11
 msgid "Sign in"
 msgstr "Anmelden"
 
-#: home/templates/home/base.html:83
+#: home/templates/home/base.html:82
 msgid "or"
 msgstr "oder"
 
-#: home/templates/home/base.html:84 home/templates/home/index.html:54
+#: home/templates/home/base.html:83 home/templates/home/index.html:54
 #: home/templates/home/register.html:17
 msgid "Sign up"
 msgstr "Eintragen"
@@ -159,8 +159,8 @@ msgid "Edit profile"
 msgstr "Profil ändern"
 
 #: member/templates/member/main.html:23
-msgid "Log out"
-msgstr ""
+msgid "Logout"
+msgstr "Logout"
 
 #: mountainbikers/settings.py:122
 msgid "French"
@@ -218,9 +218,6 @@ msgstr "Löschen"
 #: trail/templates/trail/new.html:22
 msgid "Share the fun of the trail"
 msgstr "Teil den Spaß am Trail"
-
-#~ msgid "Logout"
-#~ msgstr "Logout"
 
 #~ msgid "Last trails"
 #~ msgstr "Letzten Trails"
