fix donnation link

--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-31 16:26+0000\n"
+"POT-Creation-Date: 2018-08-31 16:29+0000\n"
 "PO-Revision-Date: 2018-08-18 21:45+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -44,9 +44,9 @@ msgstr "Dieser Benutzername ist verboten."
 #: home/templates/home/base.html:56
 msgid ""
 "Developing and hosting a great web applicable is fun, but not free. If you "
-"love Mountain Bikers Club please consider <a href=\"https://liberapay.com/"
-"cedeber\" target=\"_blank\" rel=\"noopener\">helping me for the price of few "
-"cafes</a>. Thank you very much!"
+"love Mountain Bikers Club please consider <a href=\"https://www.buymeacoffee."
+"com/cedeber\" target=\"_blank\" rel=\"noopener\">helping me for the price of "
+"few cafes</a>. Thank you very much!"
 msgstr ""
 
 #: home/templates/home/base.html:75 home/templates/home/discover.html:4
