--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-31 16:26+0000\n"
+"POT-Creation-Date: 2018-08-31 16:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,9 +44,9 @@ msgstr ""
 #: home/templates/home/base.html:56
 msgid ""
 "Developing and hosting a great web applicable is fun, but not free. If you "
-"love Mountain Bikers Club please consider <a href=\"https://liberapay.com/"
-"cedeber\" target=\"_blank\" rel=\"noopener\">helping me for the price of few "
-"cafes</a>. Thank you very much!"
+"love Mountain Bikers Club please consider <a href=\"https://www.buymeacoffee."
+"com/cedeber\" target=\"_blank\" rel=\"noopener\">helping me for the price of "
+"few cafes</a>. Thank you very much!"
 msgstr ""
 
 #: home/templates/home/base.html:75 home/templates/home/discover.html:4
