--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-10-01 16:10+0000\n"
+"POT-Creation-Date: 2018-10-03 17:10+0000\n"
 "PO-Revision-Date: 2018-08-22 15:06+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -326,6 +326,26 @@ msgstr ""
 msgid "or"
 msgstr "ou"
 
+#: shell/templates/shell/base.html:128
+msgid "Facebook page"
+msgstr "Page Facebook"
+
+#: shell/templates/shell/base.html:135
+msgid "Facebook Messenger"
+msgstr ""
+
+#: shell/templates/shell/base.html:142
+msgid "Mastodon social network"
+msgstr "Réseau social Mastodon"
+
+#: shell/templates/shell/base.html:149
+msgid "Source Code on Github"
+msgstr "Code source chez GitHub"
+
+#: shell/templates/shell/base.html:156
+msgid "Buy me a coffee support page"
+msgstr "Page de support Buy me a coffee"
+
 #: shell/templates/shell/base.html:171
 msgid ""
 "Developing and hosting a great web applicable is fun, but not free. If you "
@@ -370,24 +390,67 @@ msgstr "Description"
 msgid "GPX file"
 msgstr "Fichier GPX"
 
-#: trail/tasks.py:76 trail/templates/trail/main.html:36
+#: trail/tasks.py:75 trail/templates/trail/main.html:31
 msgid "Unnamed Trail"
 msgstr "Trail sans nom"
 
-#: trail/templates/trail/main.html:40
+#: trail/templates/trail/main.html:13 trail/templates/trail/main.html:101
+#: trail/templates/trail/tag_trail_preview.html:31 trail/views.py:117
+msgid "Distance"
+msgstr "Distance"
+
+#: trail/templates/trail/main.html:13
+msgid "Duration"
+msgstr "Durée"
+
+#: trail/templates/trail/main.html:13 trail/templates/trail/main.html:108
+#: trail/templates/trail/tag_trail_preview.html:38
+msgid "Uphill"
+msgstr "Montée"
+
+#: trail/templates/trail/main.html:35
 #, python-format
 msgid "Published by <a href=\"%(link)s\">@%(user)s</a> on %(date)s."
 msgstr "Publié par <a href=\"%(link)s\">@%(user)s</a> le %(date)s."
 
-#: trail/templates/trail/main.html:60
+#: trail/templates/trail/main.html:55
 msgid "Edit trail"
 msgstr "Modifier le trail"
 
-#: trail/templates/trail/main.html:134
+#: trail/templates/trail/main.html:69
+#: trail/templates/trail/tag_trail_preview.html:24
+msgid "Location"
+msgstr "Lieu"
+
+#: trail/templates/trail/main.html:76
+msgid "Minimum altitude"
+msgstr "Altitude minimale"
+
+#: trail/templates/trail/main.html:83
+msgid "Maximun altidtude"
+msgstr "Altitude maximale"
+
+#: trail/templates/trail/main.html:90
+msgid "Start date and time"
+msgstr "Date et heure de départ"
+
+#: trail/templates/trail/main.html:115
+msgid "Moving time"
+msgstr "Temps de déplacement"
+
+#: trail/templates/trail/main.html:122
+msgid "Average moving speed"
+msgstr "Vitesse moyenne de déplacement"
+
+#: trail/templates/trail/main.html:129
+msgid "Maximum speed"
+msgstr "Vitesse maximale"
+
+#: trail/templates/trail/main.html:138
 msgid "Analyzing..."
 msgstr "Analyse en cours..."
 
-#: trail/templates/trail/main.html:136
+#: trail/templates/trail/main.html:140
 #, python-format
 msgid ""
 "Your trail is currently analyzed. It will take a few minutes. Once "
@@ -399,42 +462,36 @@ msgstr ""
 "Vous pouvez continuer à naviger sur Mountain Bikers Club ou <a href="
 "\"%(url_trail_new)s\">enregistrer un nouveau trail</a>."
 
-#: trail/templates/trail/main.html:183
+#: trail/templates/trail/main.html:187
 msgid "Delete trail"
 msgstr "Supprimer le trail"
 
-#: trail/views.py:98 trail/views.py:154
+#: trail/templates/trail/tag_trail_preview.html:11
+msgid "Map of the trail: "
+msgstr "Carte du trail: "
+
+#: trail/views.py:99 trail/views.py:155
 msgid "Trail does not exist"
 msgstr "Le trail est introuvable"
 
-#: trail/views.py:115
+#: trail/views.py:116
 msgid "Elevation and Speed"
 msgstr "Elévation et Vitesse"
 
-#: trail/views.py:116
-msgid "Distance"
-msgstr "Distance"
-
-#: trail/views.py:117 trail/views.py:129
+#: trail/views.py:118 trail/views.py:130
 msgid "Elevation"
-msgstr "Elevation"
+msgstr "Elévation"
 
-#: trail/views.py:127 trail/views.py:130
+#: trail/views.py:128 trail/views.py:131
 msgid "Speed"
 msgstr "Vitesse"
 
-#: trail/views.py:159
+#: trail/views.py:160
 msgid "Track index is out of range"
 msgstr "L'index du circuit est hors de portée"
 
 #~ msgid "Update from GPX"
 #~ msgstr "Mise à jour depuis le GPX"
-
-#~ msgid "Share the fun of the trail"
-#~ msgstr "Partager le fun de ce Trail"
-
-#~ msgid "Location"
-#~ msgstr "Lieu"
 
 #~ msgid "My favorites"
 #~ msgstr "Mes Favoris"
